fixed autofill color for white theme and safari bug when input collapsing

--- a/src/input/fantasy/input_theme_alfa-on-white.css
+++ b/src/input/fantasy/input_theme_alfa-on-white.css
@@ -17,6 +17,13 @@
         &::placeholder {
             color: var(--color-content-minor-alfa-on-white);
         }
+
+        &:-webkit-autofill,
+        &:-webkit-autofill:hover,
+        &:-webkit-autofill:focus,
+        &:-webkit-autofill:after {
+            -webkit-text-fill-color: var(--color-content-alfa-on-white) !important;
+        }
     }
 
     .input__top,
